--- a/index.html
+++ b/index.html
@@ -21,9 +21,9 @@
 
     <style>
     	#map {height: 60vh; background-color: grey;}
-    	body {background-color: Honeydew;}
-    	h1 {color: MidnightBlue;}
-    	p {color: MidnightBlue;}
+    	body {background-color: Azure;}
+    	h1 {color: MidnightBlue; padding: 2%}
+    	p {color: MidnightBlue; padding: 2%;}
 
 
     </style>
