--- a/index.html
+++ b/index.html
@@ -23,7 +23,8 @@
     	#map {height: 60vh; background-color: grey;}
     	body {background-color: Azure;}
     	h1 {color: MidnightBlue; padding: 10px}
-    	p {color: MidnightBlue; padding: 10px;}
+    	p {color: MidnightBlue; padding: 5px;}
+
 
 
     </style>
@@ -37,11 +38,11 @@
 
 	<h2> EPA Superfund Sites in Washington State </h2>
 	<hr>
-		<p> Superfund sites are those areas where hazardous waste has been dumped or imporperly handled. In cases where the responsible party can be identified, the EPA can force these parties to perform or pay for the cleanup.  In cases where no party can be identified, federal funding exists for cleanups.  The NPL (National Priorities List) is an up to date list of these sites.  Sites are removed once they have been sufficiently cleaned up. </p>
-		<br>
-		<p> Each icon represents a Superfund site. Click on the icons to see details about the site as well as the current NPL status. Sites that have been sufficiently cleaned  (and removed from the NPL) are marked with a leaf.  Current NPL sites are marked with a skull. Federal legislative districts are also mapped. If you are concerned about the status or pace of cleanup of any site in your district, contact you Federal Representative using the contact information in the popup. </p>
+		<p> Superfund sites are those areas where hazardous waste has been dumped or improperly handled. In cases where the responsible party can be identified, the EPA can force these parties to perform or pay for the cleanup.  In cases where no party can be identified, federal funding exists for cleanups.  The NPL (National Priorities List) is an up to date list of these sites.  Sites are removed once they have been sufficiently cleaned up. </P>
+		<p> Each icon represents a Superfund site. Click on the icons to see details about the site as well as the current NPL status. Sites that have been sufficiently cleaned  (and removed from the NPL) are marked with a leaf.  Current NPL sites are marked with a skull. Federal legislative districts are also mapped. If you are concerned about the status or pace of cleanup of any site in your district, contact you Federal Representative using the contact information in the popup. Information is current as of 11/12/2018 </p>
 
-		<hr>
+	<hr>
+	<a href= "https://www.epa.gov/superfund/what-superfund"> To learn more about EPA Superfund sites, click here. </a>
 
 	<div id= "map"> </div>
 
@@ -66,7 +67,7 @@
 	$.getJSON("superfundWA.geojson",function(data){
         var skullIcon= L.icon({
         	iconUrl: 'skull.png',
-        	iconSize: [22,22]
+        	iconSize: [26,26]
         	
         });
 
