--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
 //converted via mapshaper to GEOJSON
 	var polystyle= {
 		weight: .4,
-		fillcolor: "000000",
+		fillcolor: "#000000",
 		fillopacity: .5,
 		color: "#B22222",
 		opacity: 1
