--- a/index.html
+++ b/index.html
@@ -103,9 +103,9 @@
 //converted via mapshaper to GEOJSON
 	var polystyle= {
 		weight: .3,
-		fillcolor: "#000000",
-		fillopacity: .5,
-		color: "#B22222",
+		fillColor: "#B22222",
+		fillopacity: 0.5,
+		color: "#000000",
 		opacity: 1
 	};
 
