--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
 //converted via mapshaper to GEOJSON
 	var polystyle= {
 		weight: .3,
-		fillColor: "#B22222",
+		fillColor: "#4682B4",
 		fillopacity: 0.5,
 		color: "#000000",
 		opacity: 1
